--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,50 +1,61 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <!-- add servlet -->
-  <servlet>
-    <servlet-name>add</servlet-name>
-    <servlet-class>com.softserve.academy.servlets.AddServlet</servlet-class>
-  </servlet>
+    <display-name>Archetype Created Web Application</display-name>
+    <!-- add guide servlet -->
+    <servlet>
+        <servlet-name>add</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.AddServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>add</servlet-name>
-    <url-pattern>/add</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>add</servlet-name>
+        <url-pattern>/add</url-pattern>
+    </servlet-mapping>
 
-  <!-- list servlet -->
-  <servlet>
-    <servlet-name>list</servlet-name>
-    <servlet-class>com.softserve.academy.servlets.ListServlet</servlet-class>
-  </servlet>
+    <!-- list guide servlet -->
+    <servlet>
+        <servlet-name>list</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.ListServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>list</servlet-name>
-    <url-pattern>/list</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>list</servlet-name>
+        <url-pattern>/list</url-pattern>
+    </servlet-mapping>
 
-  <!-- delete servlet -->
-  <servlet>
-    <servlet-name>delete</servlet-name>
-    <servlet-class>com.softserve.academy.servlets.DeleteServlet</servlet-class>
-  </servlet>
+    <!-- list exhibit servlet -->
+    <servlet>
+        <servlet-name>listExhibit</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.ExhibitListServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>delete</servlet-name>
-    <url-pattern>/delete</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>listExhibit</servlet-name>
+        <url-pattern>/listExhibit</url-pattern>
+    </servlet-mapping>
 
-  <!-- delete servlet -->
-  <servlet>
-    <servlet-name>update</servlet-name>
-    <servlet-class>com.softserve.academy.servlets.UpdateServlet</servlet-class>
-  </servlet>
+    <!-- delete guide servlet -->
+    <servlet>
+        <servlet-name>delete</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.DeleteServlet</servlet-class>
+    </servlet>
 
-  <servlet-mapping>
-    <servlet-name>update</servlet-name>
-    <url-pattern>/update</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>delete</servlet-name>
+        <url-pattern>/delete</url-pattern>
+    </servlet-mapping>
+
+    <!-- update guide servlet -->
+    <servlet>
+        <servlet-name>update</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.UpdateServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>update</servlet-name>
+        <url-pattern>/update</url-pattern>
+    </servlet-mapping>
 </web-app>
