Add servlet to web xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -102,4 +102,17 @@
         <servlet-name>update</servlet-name>
         <url-pattern>/update</url-pattern>
     </servlet-mapping>
+
+    <!-- update exhibit guide relation servlet -->
+    <servlet>
+        <servlet-name>updateRelation</servlet-name>
+        <servlet-class>com.softserve.academy.servlets.DragnDropUpdate</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>updateRelation</servlet-name>
+        <url-pattern>/updateRelation</url-pattern>
+    </servlet-mapping>
+
+
 </web-app>
