--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,9 @@ cargo {
     }
 
     local {
-        homeDir = file('D:/apache-tomcat-8.5.38')
+        //homeDir = file('D:/apache-tomcat-8.5.38')
+        homeDir = file('C:/apache-tomcat-8.5.38')
+
     }
 }
 
@@ -57,8 +59,6 @@ dependencies {
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.1.Final'
 // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.13'
-    // https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.4.RELEASE'
 // https://mvnrepository.com/artifact/com.h2database/h2
    runtime group: 'com.h2database', name: 'h2', version: '1.4.197'
 // https://mvnrepository.com/artifact/javax.validation/validation-api
